# This is only needed for editable installations
[project]
name = "ros2-camera-latency-benchmark"
version = "0.1.0"
description = "A Python project template"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/ros2-camera-latency-benchmark"]
