<?xml version="1.0"?>
<package format="3">
  <name>camera_latency_benchmark</name>
  <version>0.1.0</version>
  <description>ROS 2 camera latency benchmark (raw, compressed, intra-process)</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>

  <exec_depend>image_transport_plugins</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
